# load-balancing-infrastructure

./: .gitignore  CMakeLists.txt  README.md  backend_server.cpp  backend_server.h  client.cpp  client.h  config.cpp  config.h  infrastructure.cpp  infrastructure.h  load_balancer.cpp  load_balancer.h  makefile  middle_box.cpp  middle_box.h  packet.cpp  packet.h  packet_queue.cpp  packet_queue.h  pcap-processor-notebook.ipynb  pcap-processor.py  router.cpp  trace-statistics.ipynb  utils.h
old-src/: packet_queue-old.cpp  packet_queue-old.h
src/: backend_server.cpp  client.h  config.cpp  config.h  infrastructure.h  load_balancer.cpp  load_balancer.h  main.cpp  middle_box.cpp  middle_box.h  packet.cpp  packet.h  packet_queue.cpp  packet_queue.h  router.cpp  router.h  utils.cpp  utils.h
